@startuml
annotation java.lang.Override
class java.util.InputMismatchException
class java.util.Scanner
class pruebacubo.Cubo
class pruebacubo.PruebaCubo
pruebacubo.Cubo ..> java.lang.Override
pruebacubo.PruebaCubo ..> java.util.InputMismatchException
pruebacubo.PruebaCubo ..> java.util.Scanner
@enduml